--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:h2:mem:banking
+spring.datasource.driverClassName=org.h2.driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=johnny
+spring.datasource.password=@santander
+spring.h2.console.path=/h2
+spring.h2.console.enable=true
+spring.jpa.defer-datasource-initialization=false
