--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:banking
-spring.datasource.driverClassName=org.h2.driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=johnny
 spring.datasource.password=@santander
