--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=@santander
 spring.h2.console.path=/h2
 spring.h2.console.enable=true
 spring.jpa.defer-datasource-initialization=false
+spring.jpa.open-in-view=false
+hibernate.transaction.jta.platform=true
