--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@ server.port=8080
 
 # Data Source properties
 spring.datasource.url=jdbc:mysql://localhost/banking
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Drive
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Rds213582@
 
 # JPA properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
