--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password=Rds213582@
 # JPA properties
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
