--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.data.web.sort.sort-parameter=ordem
 
 #Spring Error
 server.error.include-stacktrace=never
+
+#SpringDoc
+springdoc.api-docs.path=/api/docs
+springdoc.swagger-ui.path=/api/docs/index.html
