--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 
 # Data Source properties
-spring.datasource.url=jdbc:mysql://localhost/banking
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Rds213582@
+spring.datasource.url=
+spring.datasource.driverClassName=
+spring.datasource.username=
+spring.datasource.password=
 
 # JPA properties
 spring.jpa.show-sql=true
